# Rust

./: .gitignore  Modelos.md  README.md
2_hello_cargo/: .env  Cargo.toml
2_hello_cargo/src/: Readme.md  main.rs
3_api/: Cargo.toml  Readme.md
3_api/src/: like.rs  main.rs  routes.rs  tuite.rs
5_get/: Cargo.toml
5_get/src/: main.rs
6_post/: Cargo.toml
6_post/src/: main.rs
7_env/: Cargo.toml
7_env/src/: main.rs
8_cli/: Cargo.toml
8_cli/src/: main.rs
9_calculadora/: main.rs
Curadoria/: Readme.md
Curso/: Rust.md  aula 1.md  aula 2.md  aula 3.md  revisao.md
Curso/macros/: portugol.rs
Curso/programas/: bhaskara.rs  cadastro_alunos.rs  caixa.rs  cobrinha.rs  consumo_pedidos.rs  demanda.rs  pascal.rs  velha.rs
DesignPattern/: Readme.md
Sudoku/: main.rs
actix/: readme.MD
actix-modules/: readme.md
actix-modules/src/: api.rs  main.rs  models.rs
actix-modules/src/repo/: database.rs
algoritmos/Capitulo6/: README.md  a.rs  b.rs  d.rs  e.rs  h.rs  i.rs  l.rs  n.rs  p.rs  q.rs  s.rs
algoritmos/capitulo5/: README.md  c.rs  f.rs  g.rs  j.rs  k.rs  m.rs  o.rs  r.rs
arquitetura/: Readme.md
general/: abnt_rouding.rs  box.rs  correspondencia.rs  default.md  errorhandling.md  loopExpressions  matrizes.md  tests_and_docs  tests_and_docs.md  tictactoe.rs  types.md  variabels.rs  variables.md
terremoto/: ter.rs
