[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2021"

authors = ["Ricardo da Rocha <ricardodarocha@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "A very simple Rust Hello World with version info"
readme = "README.md"
homepage = "https://github.com/you/grrs"
repository = "https://github.com/you/grrs"
keywords = ["cli", "rest", "hello-world"]
categories = ["command-line-example"]

[package.metadata.winres]
OriginalFilename = "TEST.EXE"
Version = "0.1.0"
LegalCopyright = "Copyright Ricardo da Rocha© 2022"
FileDescription = "A very simple Rust Hello World with version info"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
